amended ie8 stylesheet to prevent span wrapping after 75%

--- a/app/assets/stylesheets/ie8.sass
+++ b/app/assets/stylesheets/ie8.sass
@@ -3,3 +3,6 @@
   fieldset.error
     background: image-url('ie-errorbg.png') 0 0 repeat-y
     border: none
+
+.phase-banner SPAN
+  width: 100%
